objects/FLODocs__OAuth2_Credential__mdt.object
<CustomObject>
    <fields>
        <fullName>FLODocs__Access_Token_URL__c</fullName>
        <description>OAuth2 Access Token URL</description>
        <inlineHelpText>OAuth2 Access Token URL</inlineHelpText>
        <label>Access Token URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FLODocs__Authorization_URL__c</fullName>
        <description>OAuth2 Authorization URL</description>
        <inlineHelpText>OAuth2 Authorization URL</inlineHelpText>
        <label>Authorization URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FLODocs__Callback_URL__c</fullName>
        <description>OAuth2 authentication callback URL</description>
        <inlineHelpText>OAuth2 authentication callback URL</inlineHelpText>
        <label>Callback URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FLODocs__Consumer_Key__c</fullName>
        <description>Consumer Key of the OAuth2 connected app</description>
        <inlineHelpText>Consumer Key of the OAuth2 connected app</inlineHelpText>
        <label>Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Consumer_Secret__c</fullName>
        <description>Consumer Secret of the OAuth2 connected app.</description>
        <inlineHelpText>Consumer Secret of the OAuth2 connected app.</inlineHelpText>
        <label>Consumer Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Data_Service_Class__c</fullName>
        <description>Concrete Data Service class name that is used with this Credential.</description>
        <inlineHelpText>Concrete Data Service class name that is used with this Credential.</inlineHelpText>
        <label>Data Service Class</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Resource_Name__c</fullName>
        <description>duplicate of DeveloperName</description>
        <inlineHelpText>duplicate of Developer</inlineHelpText>
        <label>Resource Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Resource_Type__c</fullName>
        <description>Friendly name of the Resource Provider</description>
        <inlineHelpText>Friendly name of the Resource Provider</inlineHelpText>
        <label>Resource Type</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FLODocs__Scope__c</fullName>
        <description>OAuth2 Scope</description>
        <inlineHelpText>OAuth2 Scope</inlineHelpText>
        <label>Scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>OAuth2 Credential</label>
    <pluralLabel>OAuth2 Credentials</pluralLabel>
</CustomObject>